--- a/Profil spel/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/Profil spel/Assets/UI Toolkit/MainMenuStyle.uss
@@ -11,7 +11,13 @@
     align-self: center;
     justify-content: flex-start;
     padding-top: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
 }
 
 .Menubutton:hover {
