--- a/Profil spel/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/Profil spel/Assets/UI Toolkit/MainMenuStyle.uss
@@ -30,9 +30,9 @@
     padding-top: 10px;
     margin-top: 10px;
     scale: 1.1 1.1;
-    transition-duration: 0.2s;
-    transition-timing-function: ease-in-out-back;
-    transition-delay: 0.1s;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
 }
 
 .Menubutton:active {
