--- a/Profil spel/Assets/UI Toolkit/MainHUDbuild.uxml
+++ b/Profil spel/Assets/UI Toolkit/MainHUDbuild.uxml
@@ -1,6 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/MainHUD.uss?fileID=7433441132597879392&amp;guid=2a765217ffae06d4f85706abb699794c&amp;type=3#MainHUD" />
-    <ui:VisualElement name="HUD_container" style="flex-grow: 1;">
-        <ui:VisualElement name="HUD" style="flex-grow: 1; position: absolute; height: 64px; width: 256px; top: 617px; left: 946px; background-image: url(&quot;project://database/Assets/UI%20Toolkit/Menu%20sprites/images%20(1).png?fileID=2800000&amp;guid=ff3d21d35c33dd747a73868b0321fe7a&amp;type=3#images (1)&quot;); -unity-background-image-tint-color: rgba(0, 0, 0, 0.46); background-color: rgba(56, 56, 56, 0);" />
+    <ui:VisualElement name="HUD_sett" style="flex-grow: 1;">
+        <ui:VisualElement name="HUD" style="flex-grow: 1; position: absolute; height: 64px; width: 256px; top: 617px; left: 946px; background-image: url(&quot;project://database/Assets/UI%20Toolkit/Menu%20sprites/images%20(1).png?fileID=2800000&amp;guid=ff3d21d35c33dd747a73868b0321fe7a&amp;type=3#images (1)&quot;); -unity-background-image-tint-color: rgba(0, 0, 0, 0.46); background-color: rgba(56, 56, 56, 0); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px;">
+            <ui:VisualElement name="Slot_container" style="flex-grow: 0; flex-wrap: wrap; flex-direction: row; justify-content: center; max-width: 348px; padding-top: 2px; padding-right: 2px; padding-bottom: 2px; padding-left: 2px; border-left-color: rgba(0, 0, 0, 0); border-right-color: rgba(0, 0, 0, 0); border-top-color: rgba(0, 0, 0, 0); border-bottom-color: rgba(0, 0, 0, 0);" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
