--- a/Profil spel/Assets/UI Toolkit/LevelSelect/LevelSelector.uxml
+++ b/Profil spel/Assets/UI Toolkit/LevelSelect/LevelSelector.uxml
@@ -1,4 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/LevelSelect.uss?fileID=7433441132597879392&amp;guid=339b6007ad112694a888028248260752&amp;type=3#LevelSelect" />
-    <ui:VisualElement style="flex-grow: 1; background-image: none;" />
+    <ui:VisualElement style="flex-grow: 1; background-image: none;">
+        <ui:VisualElement style="flex-grow: 1; position: absolute; height: 256px; width: 512px; top: 132px; left: 53px;" />
+    </ui:VisualElement>
 </ui:UXML>
